added simple_form and sidebar + some layout changes

--- a/config/locales/app.en.yml
+++ b/config/locales/app.en.yml
@@ -3,6 +3,8 @@ en:
     application:
       title: "TS3 on Bot Administration"
       copy:  "© 2012 TnT-Web-Solutions GbR."
+    sidebar:
+      total: "Total"
     menu:
       home:            "Overview"
       bots:            "Bots"
