--- a/config/locales/app.en.yml
+++ b/config/locales/app.en.yml
@@ -61,6 +61,7 @@ en:
       restart_info: "If you update the settings of a running bot you need to restart it that everything can work."
       basics:       "Basic settings"
       users:        "User setting"
+      afk_check:    "AFK Check Module"
     form:
       save:           "Save"
     actions:
@@ -73,6 +74,9 @@ en:
       users:
         manager_headline: "Manager list (click to remove)"
         add:              "Add"
+      afk_check:
+        activate:   "Enable"
+        deactivate: "Disable"
 
   devise:
     sessions:
